crates/zizmor/tests/integration/snapshots/integration__e2e__menagerie-2.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().output(OutputMode::Both).args([\"--collect=all\"]).input(input_under_test(\"e2e-menagerie\")).run()?"
---
🌈 zizmor v@@VERSION@@
 INFO audit: zizmor: 🌈 completed @@INPUT@@/.github/dummy-action-2/action.yml
 INFO audit: zizmor: 🌈 completed @@INPUT@@/.github/workflows/another-dummy.yml
 INFO audit: zizmor: 🌈 completed @@INPUT@@/.github/workflows/dummy.yml
 INFO audit: zizmor: 🌈 completed @@INPUT@@/.github/workflows/ignored.yaml
 INFO audit: zizmor: 🌈 completed @@INPUT@@/dummy-action-1/action.yaml
error[dangerous-triggers]: use of fundamentally insecure workflow trigger
 --> @@INPUT@@/.github/workflows/ignored.yaml:4:1
  |
4 | on: pull_request_target
  | ^^^^^^^^^^^^^^^^^^^^^^^ pull_request_target is almost always used insecurely
  |
  = note: audit confidence → Medium

4 findings (3 suppressed): 0 informational, 0 low, 0 medium, 1 high
